# IVR

./: .gitignore  AK_Moroz._final_codemd  AK_Moroz_final_code.md  Dockerfile  IT_Мороз.docx  README.md  amoroz_application.md  amoroz_userscripts.md  demo.db  pyproject.toml  requirements.txt  requirments.txt  test.db  ~$_Мороз.docx  ИВР заявка.docx
.github/workflows/: main.yml  pipeline.yml
app/: config.py  main.py  sql_app.db
app/constants/: models_constants.py  session_constants.py  tests_constants.py  users_constants.py
app/database/: entities.py
app/db/: database.py
app/gunicorn/: logger.py
app/roters_my_quiz/: questionanswers.py  questions.py  session.py  tests.py  useranswers.py  users.py
app/static/: index.html  script.js  style.css
app/usermodels/: models.py
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
tests/: test_api.py
